weblogic/10.3.6/labels-check.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: default
  labels:
    app: nginx
    #owner: admin
spec:
  containers:
   - name: nginx
     image: nginx:1.16
     ports:
     - containerPort: 80
     imagePullPolicy: IfNotPresent
  restartPolicy: Always
