weblogic/10.3.6/pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iam-demo
  template:
    metadata:
      labels:
        app: iam-demo
    spec:
      serviceAccountName: default
      containers:
      - name: iam-demo
        image: sdscello/awscli:latest
        ports:
        - containerPort: 80
