weblogic/10.3.6/securityContextReadOnly.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webserver
  labels:
    name: webserver
spec:
  containers:
  - name: webserver
    image: nginx:alpine
    securityContext:
      readOnlyRootFilesystem: false
    ports:
      - containerPort: 80
