weblogic/10.3.6/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    #alb.ingress.kubernetes.io/inbound-cidrs: 10.0.0.0/8 # Controlling the external traffic comming from end users
    #alb.ingress.kubernetes.io/target-type: ip   # IP mode if we are using Fargate type of nodes 
spec:
  rules:
    - host: foo.jomo.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foo-app-service
                port:
                  number: 3000
    - host: bar.jomo.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bar-app-service
                port:
                  number: 3000
